--- a/appSettings.json
+++ b/appSettings.json
@@ -2,6 +2,7 @@
     "ServiceBus": {
         "NamespaceUrl": "[The namespace url (i.e. codeityourself.servicebus.windows.net)]",
         "PolicyName": "[The policy name]",
-        "Key": "[The SAS key]"
+        "Key": "[The SAS key]",
+        "QueueName: "[The queue name]"
     }
 }
